# plc-comm-hostlink-python

./: .coverage  .gitignore  AGENTS.md  CHANGELOG.md  MANIFEST.in  README.md  SECURITY.md  TODO.md  build_docs.bat  build_docs_publish.bat  mkdocs.yml  pyproject.toml  release_check.bat  run_ci.bat  temp.txt
.github/workflows/: release.yml  test.yml
docs/: 404.html  api_reference.md  host_link_protocol.md  index.html  index.md  objects.inv  sitemap.xml
docs/CHANGELOG/: index.html
docs/api/: client.md
docs/api/client/: index.html
docs/maintainer/: PROTOCOL_SPEC.md  SPEC_COVERAGE.md
docs/maintainer/API_UNIFICATION_POLICY/: index.html
docs/maintainer/ARCHITECTURE/: index.html
docs/maintainer/PROTOCOL_SPEC/: index.html
docs/maintainer/RELEASE_PROCESS/: index.html
docs/maintainer/SPEC_COVERAGE/: index.html
docs/maintainer/TESTING_GUIDE/: index.html
docs/search/: search_index.json
docs/user/: API_REFERENCE.md  PERFORMANCE_GUIDE.md  TROUBLESHOOTING.md  USER_GUIDE.md
docs/user/API_REFERENCE/: index.html
docs/user/GETTING_STARTED/: index.html
docs/user/LATEST_COMMUNICATION_VERIFICATION/: index.html
docs/user/PERFORMANCE_GUIDE/: index.html
docs/user/SUPPORTED_REGISTERS/: index.html
docs/user/TROUBLESHOOTING/: index.html
docs/user/USER_GUIDE/: index.html
docs/validation/reports/QA_REPORT_20260319_KV7500/: index.html
docs/validation/reports/SMOKE_TEST/: index.html
docsrc/: CHANGELOG.md  index.md
docsrc/api/: client.md
docsrc/maintainer/: API_UNIFICATION_POLICY.md  ARCHITECTURE.md  PROTOCOL_SPEC.md  SPEC_COVERAGE.md  TESTING_GUIDE.md
docsrc/user/: API_REFERENCE.md  GETTING_STARTED.md  LATEST_COMMUNICATION_VERIFICATION.md  PERFORMANCE_GUIDE.md  SUPPORTED_REGISTERS.md  TROUBLESHOOTING.md  USER_GUIDE.md
docsrc/validation/reports/: QA_REPORT_20260319_KV7500.md  SMOKE_TEST.md
hostlink/: __init__.py  client.py  device.py  errors.py  protocol.py
internal_docs/maintainer/: API_UNIFICATION_POLICY.md  RELEASE_PROCESS.md
internal_docs/validation/reports/: QA_REPORT_20260319_KV7500.md
samples/: README.md  basic_high_level_rw.py  basic_test.py  exhaustive_address_test.py  extreme_validation.py  full_pattern_validation.py  grand_unified_test.py  high_level_async.py  high_level_sync.py  named_snapshot.py  polling_monitor.py  stress_test.py  ultimate_dm_stress.py
scripts/: check_high_level_docs.py  check_user_samples.py  e2e_smoke_test.py  mock_server_standalone.py
src/hostlink/: __init__.py  client.py  device.py  device_ranges.py  errors.py  protocol.py  utils.py
tests/: test_async_client.py  test_comprehensive.py  test_frame_vectors.py  test_high_level_surface.py  test_spec_compliance.py
tests/vectors/: hostlink_frame_vectors.json
