[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hostlink"
version = "0.1.2"
description = "Python library for KEYENCE KV-XLE02 Host Link communication."
authors = [{ name = "Author Name", email = "author@example.com" }]
requires-python = ">=3.10"
dependencies = []
readme = "README.md"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]
[tool.setuptools]
package-dir = { "" = "src" }
packages = ["hostlink"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools.exclude-package-data]
"*" = [
    "TODO.md",
    "docsrc/maintainer/*",
    "docsrc/validation/*",
    "tests/*",
    "scripts/*",
    "samples/*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
files = ["src/hostlink"]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.coverage.run]
source = ["hostlink"]
branch = true

[tool.coverage.report]
show_missing = true






