[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kv-hostlink"
version = "0.1.7"
description = "Python library for KEYENCE KV series Host Link (Upper Link) communication."
authors = [{ name = "fa-yoshinobu" }]
license = "MIT"
requires-python = ">=3.10"
dependencies = []
readme = "README.md"

license-files = ["LICENSE"]
keywords = ["keyence", "kv", "hostlink", "upper-link", "plc", "tcp", "udp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

[project.urls]
Homepage = "https://github.com/fa-yoshinobu/plc-comm-hostlink-python"
Repository = "https://github.com/fa-yoshinobu/plc-comm-hostlink-python"
Issues = "https://github.com/fa-yoshinobu/plc-comm-hostlink-python/issues"

[project.optional-dependencies]
dev = [
    "build>=1.2",
    "mypy>=1.10",
    "pre-commit>=3.7",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "twine>=5.1",
]
[tool.setuptools]
package-dir = { "" = "src" }
packages = ["hostlink"]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed"]

[tool.setuptools.exclude-package-data]
"*" = [
    "TODO.md",
    "internal_docs/*",
    "internal_docs/**/*",
    "tests/*",
    "scripts/*",
    "samples/*"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py310"
extend-exclude = ["dist"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
files = ["src/hostlink"]
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
strict_equality = true

[tool.coverage.run]
source = ["hostlink"]
branch = true

[tool.coverage.report]
show_missing = true







